--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "repository": "https://github.com/NauanyC/Messager",
   "author": "Nauany <nauanycc@outlook.com.br>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack serve"
+  },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -15,6 +19,9 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/react": "^17.0.7",
+    "@types/react-dom": "^17.0.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
@@ -22,6 +29,7 @@
     "image-webpack-loader": "^7.0.1",
     "path": "^0.12.7",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.2.2",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
