--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Nauany <nauanycc@outlook.com.br>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "react": "^17.0.2",
