--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,17 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "react-hooks"],
+  "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "extends": [
     "plugin:react/recommended",
     "airbnb",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ],
 
   "rules": {
+    "prettier/prettier": "error",
     "arrow-body-style": "off",
     "@typescript-eslint/arrow-body-style": "off",
     "react/jsx-one-expression-per-line": "off",
