--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,7 @@
     "plugin:react/recommended",
     "airbnb",
     "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "prettier"
   ],
 
   "rules": {
