--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/react": "^17.0.7",
     "@types/react-dom": "^17.0.5",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "babel-eslint": "^10.1.0",
